--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,44 +1,34 @@
-name: Release flow
+name: Release
 
 on:
-    push:
-        branches:
-            - main
-        paths-ignore:
-        - package.json
-        - CHANGELOG.md
-env:
-  DIST_PATH: dist
-  RELEASE_PATH: output.zip
+  push:
 
-jobs:
-    setup:
-        name: Checkout & generate changelog
-        runs-on: ubuntu-latest
-    
-        outputs:
-          clean_changelog: ${{ steps.changelog.outputs.clean_changelog }}
-          tag: ${{ steps.changelog.outputs.tag }}
-          skipped: ${{ steps.changelog.outputs.skipped }}
-    
-        steps:
-          - name: Checkout
-            uses: actions/checkout@v3
-            with:
-              ref: release
-          - name: Generate Changelog
-            id: changelog
-            uses: TriPSs/conventional-changelog-action@v3
-            with:
-                git-message: 'chore(release): {version}'
-                release-count: 0
+    branches:
+      - main
 
-          - name: create release
-            uses: actions/create-release@v1
-            if: ${{ steps.changelog.outputs.skipped == 'false'}}
-            env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            with:
-                tag_name: ${{ steps.changelog.outputs.tag }}
-                release_name: ${{ steps.changelog.outputs.tag }}
-                body: ${{ steps.changelog.outputs.clean_changelog }}
+jobs: 
+
+   new-release: 
+
+      runs-on: ubuntu-latest 
+
+      steps: 
+
+         - uses: actions/checkout@v3
+
+         - name: Conventional Changelog Action
+           id: changelog
+           uses: TriPSs/conventional-changelog-action@v3
+           with:
+            github-token: ${{ secrets.github_token }}
+            output-file: "false" 
+
+         - name: Create Release
+           uses: actions/create-release@v1
+           if: ${{ steps.changelog.outputs.skipped == 'false' }}
+           env:
+             GITHUB_TOKEN: ${{ secrets.github_token }}
+           with: 
+            tag_name: ${{ steps.changelog.outputs.tag }}
+            release_name: ${{ steps.changelog.outputs.tag }}
+            body: ${{ steps.changelog.outputs.clean_changelog }}
