--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,29 +8,16 @@ on:
     paths-ignore:
       - CHANGELOG.md
 
-jobs: 
-
-   new-release: 
-
-      runs-on: ubuntu-latest 
-
-      steps: 
-
-         - uses: actions/checkout@v3
-
-         - name: Conventional Changelog Action
-           id: changelog
-           uses: TriPSs/conventional-changelog-action@v3
-           with:
-            github-token: ${{ secrets.github_token }}
-            output-file: "false" 
-
-         - name: Create Release
-           uses: actions/create-release@v1
-           if: ${{ steps.changelog.outputs.skipped == 'false' }}
-           env:
-             GITHUB_TOKEN: ${{ secrets.github_token }}
-           with: 
-            tag_name: ${{ steps.changelog.outputs.tag }}
-            release_name: ${{ steps.changelog.outputs.tag }}
-            body: ${{ steps.changelog.outputs.clean_changelog }}
+jobs:
+  create-github-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Create Release
+        run: gh release create ${{ github.ref }} --generate-notes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
