--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   create-github-release:
+    permissions: write-all
     name: Create GitHub Release
     runs-on: ubuntu-latest
     steps:
