--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.build_changelog.outputs.changelog }}
+          release_name: ${{ steps.build_changelog.outputs.changelog }}
           body: ${{steps.build_changelog.outputs.changelog}}
+          draft: false
+          prerelease: false
