--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   Release:
-    name: "Release"
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - uses: marvinpinto/action-automatic-releases@latest
