--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,70 @@
-name: Release
+# name: Release
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   Release:
+#     name: Release
+#     permissions:
+#       contents: write
+#       issues: write
+#       pull-requests: write
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-node@v2
+#         with:
+#           node-version: 18
+#       - run: npm ci
+#       - run: npm run build
+#       - run: npx semantic-release
+#         env:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
+
+name: Create Release
 
 jobs:
-  Release:
-    name: Release
+  publish-to-npm:
+    name: Publish to npm
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+    - name: Checkout source
+      uses: actions/checkout@v3
+    - name: Setup node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        registry-url: 'https://registry.npmjs.org'
+        cache: npm
+    - name: Install latest npm version
+      run: npm install -g npm@latest
+    - name: Install dependencies and build
+      run: npm ci
+    - name: Publish package
+      run: npm publish --provenance
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  create-github-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: publish-to-npm
     permissions:
       contents: write
-      issues: write
-      pull-requests: write
-    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 18
-      - run: npm ci
-      - run: npm run build
-      - run: npx semantic-release
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Create Release
+        run: gh release create ${{ github.ref }} --generate-notes
         env:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
