--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,42 +31,28 @@ on:
     tags:
       - 'v*'
 
-name: Create Release
 
 jobs:
-  publish-to-npm:
-    name: Publish to npm
+  create_release:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-    steps:
-    - name: Checkout source
-      uses: actions/checkout@v3
-    - name: Setup node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-        registry-url: 'https://registry.npmjs.org'
-        cache: npm
-    - name: Install latest npm version
-      run: npm install -g npm@latest
-    - name: Install dependencies and build
-      run: npm ci
-    - name: Publish package
-      run: npm publish --provenance
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  create-github-release:
-    name: Create GitHub Release
-    runs-on: ubuntu-latest
-    needs: publish-to-npm
-    permissions:
-      contents: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
       - name: Create Release
-        run: gh release create ${{ github.ref }} --generate-notes
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
