fix: update app name

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline{
     agent any
     environment{
         DOCKERHUB_USERNAME = "sangkips"
-        APP_NAME = "TodoAPi"
+        APP_NAME = "todoapi"
         IMAGE_TAG = "${BUILD_NUMBER}"
         IMAGE_NAME = "${DOCKERHUB_USERNAME}" + "/" + "${APP_NAME}"
         REGISTRY_CREDS = "dockerhub"
