--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,7 +40,7 @@ pipeline{
                 script {
                     docker.withRegistry('', REGISTRY_CREDS) {
                         docker_image.push("${BUILD_NUMBER}")
-                        docker_image.Push('latest')
+                        docker_image.push('latest')
                     }
                 }
             }
