feat: add delete docker image

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,5 +45,14 @@ pipeline{
                 }
             }
         }
+
+        stage('Delete Docker image') {
+            steps {
+                script {
+                    sh "docker rmi ${IMAGE_NAME}:${IMAGE_TAG}"
+                    sh "docker rmi ${IMAGE_NAME}:latest"
+                }
+            }
+        }
     }
 }
