--- a/application.yaml
+++ b/application.yaml
@@ -8,7 +8,7 @@ spec:
 
   source:
     repoURL: https://github.com/sangkips/todo-example.git
-    targetRevision: main
+    targetRevision: HEAD
     path: dev
   destination: 
     server: https://kubernetes.default.svc
