--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -6,6 +6,6 @@ spec:
   selector:
     app: python-app
   ports:
-  - port: 80
+  - port: 8080
+    protocol: TCP
     targetPort: 8000
-    nodePort: 32000
