--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: python-app-svc
 spec:
+  type: NodePort
   selector:
     app: python-app
   ports:
-  - port: 8080
+  - port: 80
     protocol: TCP
     targetPort: 8000
+    nodePort: 32000
